--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/nowkwon97/23-04-07-npm-exam#readme",
   "dependencies": {
-    "clock": "^1.0.2"
+    "clock": "^1.0.2",
+    "express": "^4.18.2"
   }
 }
